builds get by username function on user model

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "migrate": "^0.2.1",
     "passport-facebook": "^2.0.0",
     "cors": "^2.7.1",
-    "bluebird": "^2.9.30"
+    "bluebird": "^2.9.30",
+    "passport-local": "^1.0.0",
+    "passport": "^0.2.2"
   }
 }
