--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.7.1",
     "bluebird": "^2.9.30",
     "passport-local": "^1.0.0",
-    "passport": "^0.2.2"
+    "passport": "^0.2.2",
+    "angularjs-scroll-glue": "^2.0.4"
   }
 }
