--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bluebird": "^2.9.30",
     "passport-local": "^1.0.0",
     "passport": "^0.2.2",
-    "angularjs-scroll-glue": "^2.0.4"
+    "angularjs-scroll-glue": "^2.0.4",
+    "ws": "^0.7.2"
   }
 }
