--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "angular-ui-tree": "~2.7.0",
     "angular-strap": "~2.3.1",
-    "angular-bluebird-promises": "~0.5.3"
+    "angular-bluebird-promises": "~0.5.3",
+    "angular-flash": "~0.1.14"
   }
 }
