--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "node-postgres-angular-chat",
   "version": "0.0.0",
   "private": true,
+  "engine": "node 0.12.7",
   "scripts": {
     "start": "node ./bin/www"
   },
